--- a/index.html
+++ b/index.html
@@ -3,97 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple HTML with CSS and Form</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
-        margin: 0;
-        padding: 0;
-      }
-
-      .container {
-        max-width: 800px;
-        margin: 20px auto;
-        padding: 20px;
-        background-color: #fff;
-        border-radius: 5px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      }
-
-      h1 {
-        color: #333;
-        text-align: center;
-      }
-
-      form {
-        margin-top: 20px;
-      }
-
-      label {
-        display: block;
-        margin-bottom: 5px;
-        color: #333;
-      }
-
-      input[type="text"],
-      input[type="email"] {
-        width: 100%;
-        padding: 8px;
-        margin-bottom: 15px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-      }
-
-      input[type="submit"] {
-        padding: 10px 20px;
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-      }
-
-      input[type="submit"]:hover {
-        background-color: #0056b3;
-      }
-    </style>
+    <title>Asim Branch Index</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Student Registration Form</h1>
-      <form id="registrationForm">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required />
+    <h1>Welcome to the Asim Branch</h1>
+    <p>This is the asim branch's content.</p>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+    <!-- Form added in the Asim branch -->
+    <form id="studentForm">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required />
 
-        <label for="age">Age:</label>
-        <input type="text" id="age" name="age" required />
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
 
-        <input type="submit" value="Submit" />
-      </form>
+      <label for="age">Age:</label>
+      <input type="text" id="age" name="age" required />
+
+      <input type="submit" value="Submit" />
+    </form>
+
+    <!-- Additional data added in the Asim branch -->
+    <div class="extra-data">
+      <h2>Extra Data from Asim Branch</h2>
+      <p>This data was added in the Asim branch.</p>
     </div>
-
-    <script>
-      document
-        .getElementById("registrationForm")
-        .addEventListener("submit", function (event) {
-          event.preventDefault(); // Prevent the default form submission
-
-          // Get form values
-          var name = document.getElementById("name").value;
-          var email = document.getElementById("email").value;
-          var age = document.getElementById("age").value;
-
-          // Create message
-          var message = "Name: " + name + "\nEmail: " + email + "\nAge: " + age;
-
-          // Display message in an alert
-          alert(message);
-        });
-    </script>
   </body>
 </html>
