this is second commit and i add university name in form

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   <body>
     <div class="container">
       <h1>Student Registration Form</h1>
+      <h1>Comsat University Islamabad Abbottabad campus</h1>
       <form id="registrationForm">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required />
